--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 cron-descriptor==1.4.5
 cryptography==43.0.1
+dj-database-url==2.3.0
 Django==5.0.7
 django-celery-beat==2.7.0
 django-cors-headers==4.4.0
@@ -43,6 +44,7 @@ pika==1.3.2
 prompt_toolkit==3.0.47
 proto-plus==1.24.0
 protobuf==5.28.2
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
