--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-environ==0.11.2
 django-firebase-auth==1.2.1
 django-timezone-field==7.0
 djangorestframework==3.15.2
+drf-yasg==1.21.8
 firebase-admin==6.5.0
 google-api-core==2.21.0
 google-api-python-client==2.149.0
@@ -37,9 +38,11 @@ grpcio==1.66.2
 grpcio-status==1.66.2
 httplib2==0.22.0
 idna==3.7
+inflection==0.5.1
 intasend-python==1.1.2
 kombu==5.3.7
 msgpack==1.1.0
+packaging==24.2
 pika==1.3.2
 prompt_toolkit==3.0.47
 proto-plus==1.24.0
@@ -53,6 +56,8 @@ pyparsing==3.1.4
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
 redis==5.1.1
 requests==2.32.3
 rsa==4.9
